# zed-windows-auto-updater

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yaml
resources/: app.manifest
src/updater/: installer.rs  mod.rs
src/utils/: mod.rs
zed-auto-updater/: Cargo.toml  README.md  build.rs
zed-auto-updater/src/: main.rs
zed-auto-updater/src/ui/: mod.rs  progress.rs
zed-auto-updater/src/updater/: github.rs  version.rs
zed-auto-updater/src/utils/: file_helper.rs  process_helper.rs
